--- a/stylesheet.css
+++ b/stylesheet.css
@@ -188,26 +188,27 @@ header {
     text-align: center;
 }
 .self-introduction {
-    background-color :aquamarine;
     display: flex;
 }
-.self-introduction img {
-    background-color: blue;
-}
 .self-introduction p {
-    background-color: #ffcf32;
     margin-left: 30px;
 }
 .strength {
-    background-color:rgba(11, 245, 206, 0.9);
     margin-top: 30px;
+    padding: 10px;
 }
-
+.strength ul {
+    border: 2px solid black;
+    padding: 10px;
+}
 .futuer-self {
-    background-color: antiquewhite;
     margin-top: 30px;
+    padding: 10px;
 }
-
+.futuer-self ul {
+    border: 2px solid black;
+    padding: 10px;
+}
 
 
 .contact {
